Run a check inside the compiler, with Error Prone
Checkstyle and PMD read the sources, SpotBugs reads the bytecode. Error Prone
reads neither: it is a `javac` plugin, so it sees the typed AST the compiler
built and reports through the compiler's own diagnostics.

It is declared where every compiler plugin is declared, with
`@jenesis.plugin javac maven/com.google.errorprone/error_prone_core`, which
already resolves into the `plugin` scope of that compiler's own group the way
`@jenesis.plugin kotlinc ...` does. What is new is that `javac` reads that group
into its processor path beside the annotation processors of the `plugin` group,
and that a compiler plugin there keeps the whole processor path on
`--processor-path`: a plugin is only reachable from the unnamed module, where
`--add-exports ...=ALL-UNNAMED` can grant it the `com.sun.tools.javac` internals
it reads.

The rest is what a processor path cannot supply, and all an `errorprone.properties`
in a configuration folder does: `-Xplugin:ErrorProne` naming the plugin, with
`arguments` appended so every `-Xep` flag applies, `-XDcompilePolicy=simple` and
`--should-stop=ifError=FLOW`, and the ten `--add-exports`/`--add-opens`. Those
can only be granted by the JVM that runs the compiler, through `-J` options that
exist only for a forked `javac`, so the compile step forks while Error Prone is
active, whatever `jenesis.process.factory` says.

The file is the switch, not a second place to name a dependency: without it the
plugin resolves and sits unused, because `javac` runs a plugin only when it is
named; with it but without the declaration the build fails naming the
`@jenesis.plugin` line that is missing.

Opted out with `jenesis.compile.errorprone=false`, or by handing the compiler
chain a null configurator.